--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-yandex-maps": "^4.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -24,7 +26,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "react-yandex-maps": "^4.4.0",
     "sass": "^1.29.0"
   }
 }
