--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1"
+    "google-maps-react": "^2.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "react-router-dom": "^5.2.0",
+    "react-yandex-maps": "^4.4.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
