--- a/parser/package.json
+++ b/parser/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "parse": "node functions/jsonParse.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "db": "node db.js"
   },
   "author": "Evgeniy Volkov <vamper.2012@gmail.com>",
   "license": "ISC",
@@ -16,6 +17,8 @@
     "@babel/preset-env": "^7.12.1",
     "@types/node": "^14.14.7",
     "cherio": "^1.0.0-rc.2",
+    "config": "^3.3.2",
+    "mysql": "^2.18.1",
     "puppeteer": "^5.4.1",
     "transliteration": "^2.2.0"
   }
