--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "google-maps-react": "^2.0.6",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-materialize": "^3.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-yandex-maps": "^4.4.0",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
