--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "config": "^3.3.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "google-maps-react": "^2.0.6",
