--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "/map",
   "proxy": "http://localhost:5000/",
   "browserslist": {
     "production": [
