--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "client": "npm run start --prefix client",
     "client:install": "npm run install --prefix client",
     "client:build": "npm run build --prefix client",
-    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\"",
-    "prod": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run client\""
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Volkov Evgeniy <vamper.2012@gmail.com>",
   "license": "ISC",
