--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
-    "client:install": "npm run install --prefix client",
+    "client:install": "npm install --prefix client",
     "client:build": "npm run build --prefix client",
     "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Volkov Evgeniy <vamper.2012@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.2",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "google-maps-react": "^2.0.6",
-    "html-pdf": "^3.0.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "react-router-dom": "^5.2.0",
     "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
+    "concurrently": "^6.3.0",
     "nodemon": "^2.0.6"
   }
 }
