--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-router-dom": "^5.2.0",
     "react-yandex-maps": "^4.6.0"
   },
