--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-maps-react": "^2.0.6",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-router-dom": "^5.2.0",
