--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.2",
     "cross-env": "^7.0.3",
-    "ejs": "^3.1.6",
+    "docx": "^7.3.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "google-maps-react": "^2.0.6",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
